--- a/inside-deep-learing/10-attention-mechanisms/01_attention_mechanisms.ipynb
+++ b/inside-deep-learing/10-attention-mechanisms/01_attention_mechanisms.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYieeTzzj100IJs3UVMtxX",
+      "authorship_tag": "ABX9TyPSy8Fj3Cqk6cFbfZEZy6WU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "_9xoD7-8EibG"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -946,20 +946,153 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Computing attention weights"
+        "##Computing attention weights"
       ],
       "metadata": {
         "id": "rLaU_2HHgjoI"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Now that we have the various attention scores we want, we’ll define a simple helper Module that takes in the raw scores $\\alpha$ and extracted representations $h...$ and computes\n",
+        "the final output $\\bar x$. \n",
+        "\n",
+        "This will replace our Combiner module by adding one new step:\n",
+        "applying a mask to the inputs."
+      ],
+      "metadata": {
+        "id": "-P7ZvkZUgGLY"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class ApplyAttention(nn.Module):\n",
+        "  \"\"\"This helper module is used to apply the results of an attention mechanism to a set of inputs. \"\"\"\n",
+        "  def __init__(self):\n",
+        "    super(ApplyAttention, self).__init__()\n",
+        "\n",
+        "  def forward(self, states, attention_scores, mask=None):\n",
+        "    \"\"\"\n",
+        "    states: (B, T, H) shape giving the T different possible inputs\n",
+        "    attention_scores: (B, T, 1) score for each item at each context\n",
+        "    mask: None if all items are present. Else a boolean tensor of shape \n",
+        "        (B, T), with `True` indicating which items are present / valid. \n",
+        "        \n",
+        "    returns: a tuple with two tensors. The first tensor is the final context\n",
+        "    from applying the attention to the states (B, H) shape. The second tensor\n",
+        "    is the weights for each state with shape (B, T, 1).\n",
+        "    \"\"\"\n",
+        "    if mask is not None:\n",
+        "      # set everything not present to a large negative value that will cause vanishing gradients \n",
+        "      attention_scores[~mask] = -1000.0\n",
+        "    # compute the weight for each score\n",
+        "    weights = F.softmax(attention_scores, dim=1)  # (B, T, 1) still, but sum(T) = 1\n",
+        "    final_context = (states * weights).sum(dim=1) # (B, T, D) * (B, T, 1) -> (B, D)\n",
+        "    return final_context, weights"
+      ],
       "metadata": {
         "id": "wu1tWctngkmB"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_mask_by_fill(x, time_dimension=1, fill=0):\n",
+        "  \"\"\"\n",
+        "  x: the original input with three or more dimensions, (B, ..., T, ...)\n",
+        "      which may have unsued items in the tensor. B is the batch size, and T is the time dimension. \n",
+        "  time_dimension: the axis in the tensor `x` that denotes the time dimension\n",
+        "  fill: the constant used to denote that an item in the tensor is not in use, and should be masked out (`False` in the mask). \n",
+        "  \n",
+        "  return: A boolean tensor of shape (B, T), where `True` indicates the value at that time is good to use, and `False` that it is not.\n",
+        "  \"\"\"\n",
+        "  # skip the first dimension 0 because that is the batch dimension\n",
+        "  to_sum_over = list(range(1, len(x.shape)))\n",
+        "\n",
+        "  if time_dimension in to_sum_over:\n",
+        "    to_sum_over.remove(time_dimension)\n",
+        "  \n",
+        "  with torch.no_grad():\n",
+        "    \"\"\"\n",
+        "    (x!=fill) determines locations that might be unused, beause they are missing the fill value we are looking for to indicate lack of use. \n",
+        "    We then count the number of non-fill values over everything in that time slot (reducing changes the shape to (B, T)). If any one entry \n",
+        "    is non equal to this value, the item represent must be in use - so return a value of true.\n",
+        "    \"\"\"\n",
+        "    mask = torch.sum((x != fill), dim=to_sum_over) > 0\n",
+        "  return mask "
+      ],
+      "metadata": {
+        "id": "Gon0xjE3o47M"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s see a quick example of how this new function works."
+      ],
+      "metadata": {
+        "id": "pNUuYQ5rqtWI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creates the hypothetical data and computes the appropriate mask\n",
+        "with torch.no_grad():\n",
+        "  x = torch.rand((5, 3, 1, 7, 7))\n",
+        "  x[0, -1, :] = 0   # Don't use the last item in the first input\n",
+        "  x[3, :] = 0       # Don't use any of the 4'th item!\n",
+        "  x[4, 0, 0, 0] = 0 # Make it _look_ like we aren't using part of the 5th, but we still are!\n",
+        "  # This last line was added to show that this works even on tricky inputs\n",
+        "  mask = get_mask_by_fill(x)\n",
+        "  \n",
+        "print(mask)"
+      ],
+      "metadata": {
+        "id": "vf3d1TkLqtxY",
+        "outputId": "c099a353-22ac-46f3-a4c5-80ff92fab2aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ True,  True, False],\n",
+            "        [ True,  True,  True],\n",
+            "        [ True,  True,  True],\n",
+            "        [False, False, False],\n",
+            "        [ True,  True,  True]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Putting it all together"
+      ],
+      "metadata": {
+        "id": "w9_hlJatr-Ch"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now let's create a complete attention mechanism with context."
+      ],
+      "metadata": {
+        "id": "r-aQnfGAr-5-"
+      }
     }
   ]
 }
