--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOE26chANmqx/JwZBFEp8PY",
+      "authorship_tag": "ABX9TyPTyYz7d5oT2EFvSAbDoTDu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
           "height": 17
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -113,7 +113,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "ZNIlTCW9_gBk"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +236,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Moving Around"
+        "## Moving Around"
       ],
       "metadata": {
         "id": "2CYbWbW-HxNt"
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "UN7eF6XnGotK"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
       "metadata": {
         "id": "g8r2NNINKeUI"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +442,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,9 +464,57 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Next, we go back to the left side and move down one step. If we repeat the\n",
+        "operation, covering all valid regions, we’ll end up with a resulting image that is\n",
+        "smaller (on the right).\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/images/conv8.png?raw=1)\n",
+        "\n",
+        "How much smaller is it going to be?\n",
+        "\n",
+        "It depends on the size of the filter.\n",
+        "\n",
+        ">The larger the filter, the smaller the resulting image.\n",
+        "\n",
+        "Since applying a filter always produces a single value, the reduction is equal to the\n",
+        "filter size minus one.\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "(h_i, w_i) * (h_f, w_f) = (h_i - (h_f - 1), w_i - (w_f - 1))\n",
+        "$$\n",
+        "\n",
+        "If we assume the filter is a square matrix of size f, we can simplify the expression\n",
+        "above to:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "(h_i, w_i) * f = (h_i - f + 1, w_i - f + 1)\n",
+        "$$\n",
+        "\n",
+        "But I’d like to keep the image size, is it possible?\n",
+        "\n",
+        "Sure it is! Padding comes to our rescue in this case."
+      ],
       "metadata": {
         "id": "lhKlTPhcLR-m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Convolving in PyTorch"
+      ],
+      "metadata": {
+        "id": "iZdPF3vJSJNm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "svvUMTDGSKHX"
       }
     }
   ]
