--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPTyYz7d5oT2EFvSAbDoTDu",
+      "authorship_tag": "ABX9TyMFPSIo6MDd27ub2vUnsBpG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,13 +67,13 @@
       ],
       "metadata": {
         "id": "iiQ_qcSp_Uq6",
-        "outputId": "5a231acc-1773-4c25-fb5f-272224eddee3",
+        "outputId": "99267e7a-224c-4a69-ee88-28b2a461d29e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -108,12 +108,12 @@
       ],
       "metadata": {
         "id": "6EwSrmrQ_cxf",
-        "outputId": "4c459d41-33fd-4bd4-b4b3-e1cb98477543",
+        "outputId": "a8f92f49-a50a-4b02-cd86-333fd4f6006a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "ZNIlTCW9_gBk"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -196,12 +196,12 @@
       ],
       "metadata": {
         "id": "jPyifdt-AUSX",
-        "outputId": "7a3be48a-562d-4f31-f74f-296aae5947b2",
+        "outputId": "33208a59-53a5-4946-dd20-fd6ae20b2f90",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,12 +231,12 @@
       ],
       "metadata": {
         "id": "oiO3F9UGFO9G",
-        "outputId": "93f13015-6731-4adc-a14d-e4d8b635ad3d",
+        "outputId": "0d4035d6-c921-4cf0-f43f-ab1e643afec0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,12 +281,12 @@
       ],
       "metadata": {
         "id": "CVEwetTtF1H2",
-        "outputId": "4f2477e1-951f-4bb6-a8eb-175300696f97",
+        "outputId": "3c0c7d4d-4b86-4c2f-9a85-51b3cb3292c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "UN7eF6XnGotK"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -367,12 +367,12 @@
       ],
       "metadata": {
         "id": "tu1Xmj6HJOyX",
-        "outputId": "c2f7c08a-9150-427a-c261-f3b1f16b09fd",
+        "outputId": "ff428a17-8d9b-46f2-a472-c8797d717840",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
       "metadata": {
         "id": "g8r2NNINKeUI"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -437,12 +437,12 @@
       ],
       "metadata": {
         "id": "zcWMNoMCK5w_",
-        "outputId": "978051b5-beda-4b75-a81a-4042e81633d1",
+        "outputId": "898963d5-45f3-492c-c243-0a6a7d48761a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,9 +512,301 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Now that we know how a convolution works, let’s try it out using PyTorch."
+      ],
       "metadata": {
         "id": "svvUMTDGSKHX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert our image and filter to tensors\n",
+        "image = torch.as_tensor(single).float()\n",
+        "kernel = torch.as_tensor(identity).float()"
+      ],
+      "metadata": {
+        "id": "FpDNP9utXtc6"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Just like the activation functions, convolutions come in two\n",
+        "flavors: functional and module. \n",
+        "\n",
+        "There is a fundamental difference between the\n",
+        "two, though: The functional convolution takes the kernel / filter as an argument\n",
+        "while the module has (learnable) weights to represent the kernel / filter.\n",
+        "\n",
+        "Let’s use the functional convolution, `F.conv2d()`, to apply the identity filter to our\n",
+        "input image."
+      ],
+      "metadata": {
+        "id": "7XxFSecQYQao"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "convolved = F.conv2d(image, kernel, stride=1)\n",
+        "convolved"
+      ],
+      "metadata": {
+        "id": "Fm6TCTCpYfRF",
+        "outputId": "c6d5163c-7e2b-4137-be45-62e063c787e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[9., 5., 0., 7.],\n",
+              "          [0., 2., 4., 6.],\n",
+              "          [7., 6., 6., 8.],\n",
+              "          [3., 8., 5., 1.]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let’s turn our attention to PyTorch’s convolution module, `nn.Conv2d`."
+      ],
+      "metadata": {
+        "id": "2jPbCKifZuGU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv = nn.Conv2d(in_channels=1, out_channels=1, kernel_size=3, stride=1)\n",
+        "conv(image)"
+      ],
+      "metadata": {
+        "id": "UxDu6pa1ZwRu",
+        "outputId": "3e61ff0f-eb14-4a2e-ff16-737944fd3c03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[ 0.3116, -2.5939, -2.5096,  1.8754],\n",
+              "          [-1.1964, -0.3318,  0.2698,  1.8475],\n",
+              "          [-1.4853,  1.1750,  0.9138, -1.0752],\n",
+              "          [-2.8796,  0.1066, -4.0413, -2.7793]]]],\n",
+              "       grad_fn=<ConvolutionBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "These results are gibberish now because the convolutional module randomly initializes the weights representing\n",
+        "the kernel / filter.\n",
+        "\n",
+        "That’s the whole point of the convolutional module: It will learn\n",
+        "the kernel / filter on its own.\n",
+        "\n",
+        "In traditional computer vision, people would develop different\n",
+        "filters for different purposes: blurring, sharpening, edge\n",
+        "detection, and so on.\n",
+        "\n",
+        "Can we tell it to learn multiple filters at once?"
+      ],
+      "metadata": {
+        "id": "0mRxitR_aIFf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv_multiple = nn.Conv2d(in_channels=1, out_channels=2, kernel_size=3, stride=1)\n",
+        "conv_multiple(image)"
+      ],
+      "metadata": {
+        "id": "-tkVCkuuasJi",
+        "outputId": "de5d40a1-01f4-40e2-fee7-6531e6f82ec1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[ 1.9461,  5.1062,  2.4449,  4.0832],\n",
+              "          [ 5.1448,  1.9132,  3.0770,  5.8165],\n",
+              "          [ 5.4219,  5.9928,  4.9376,  4.3885],\n",
+              "          [ 4.2059,  2.9469,  2.8337,  1.5178]],\n",
+              "\n",
+              "         [[-1.7295, -5.2360, -3.8463, -1.0855],\n",
+              "          [-5.8062, -0.2293, -2.4201, -5.3449],\n",
+              "          [-2.0328, -3.6810, -4.5338, -3.6006],\n",
+              "          [-3.9992, -2.4474, -4.3811, -2.5371]]]],\n",
+              "       grad_fn=<ConvolutionBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv_multiple.weight"
+      ],
+      "metadata": {
+        "id": "ToKEQ1v1a_fp",
+        "outputId": "6784ea60-8e9c-4508-b54b-d5b10307ba4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Parameter containing:\n",
+              "tensor([[[[-0.2465,  0.1548, -0.0782],\n",
+              "          [ 0.2471,  0.2226,  0.1297],\n",
+              "          [ 0.0705,  0.1128,  0.1854]]],\n",
+              "\n",
+              "\n",
+              "        [[[ 0.2079, -0.2087, -0.3006],\n",
+              "          [-0.2097,  0.0569, -0.0502],\n",
+              "          [-0.1175, -0.0695, -0.0050]]]], requires_grad=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can also force a convolutional module to use a particular filter by setting its weights."
+      ],
+      "metadata": {
+        "id": "T3e8p3TVdKkN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "  conv.weight[0] = kernel\n",
+        "  conv.bias[0] = 0\n",
+        "\n",
+        "conv(image)"
+      ],
+      "metadata": {
+        "id": "uzMNjIh6dMBq",
+        "outputId": "2fee6bfa-eb76-49fb-fac3-cff72da0dde9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[9., 5., 0., 7.],\n",
+              "          [0., 2., 4., 6.],\n",
+              "          [7., 6., 6., 8.],\n",
+              "          [3., 8., 5., 1.]]]], grad_fn=<ConvolutionBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv.weight"
+      ],
+      "metadata": {
+        "id": "b5TEqL4ud8zW",
+        "outputId": "e0f41438-949e-4ad1-80de-441c484845a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Parameter containing:\n",
+              "tensor([[[[0., 0., 0.],\n",
+              "          [0., 1., 0.],\n",
+              "          [0., 0., 0.]]]], requires_grad=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Setting the weights to get specific filters is at the heart of\n",
+        "transfer learning. \n",
+        "\n",
+        "Someone else trained a model, and that model\n",
+        "learned lots of useful filters, so we don’t have to learn them\n",
+        "again. We can set the corresponding weights and go from there."
+      ],
+      "metadata": {
+        "id": "5gYV5KxYeIWJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Striding"
+      ],
+      "metadata": {
+        "id": "t9HI8NnZeKMm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "fyfsZe1MeMGQ"
       }
     }
   ]
